# hardcopy

./: README.md  pyproject.toml
src/hardcopy/: __init__.py  __main__.py  copiers.py  types.py  utils.py  validate.py  validaters.py
src/ropycopy/: types.py  validate.py
tests/: test_copy_validate.py
